--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
     path: packages/expense_repository
   equatable: ^2.0.5
   firebase_core: ^3.3.0
+  shimmer_animation: ^2.2.1
 
 dev_dependencies:
   flutter_test:
